@@ -6,13 +6,13 @@ AUX python-debian-0.1.26-fix-tests.patch 1032 SHA256 730b4f1997090ffd58713398caa
 DIST python-debian_0.1.26.tar.xz 289496 SHA256 601e2a096c1490669f35080544875857bdc54b5f43bf1a37f88fccbf3740b4f8 SHA512 c857bdeaf651626c1b9d1f0f114bae961d073771f0a38caaa06785323bd586cf15fd2bf662a7bdc3af148f387756260b9d81378fdd5044bfabf7388de79c4d5a WHIRLPOOL 1dcf9a855e75ed483551edffba72265878208f3e55adf9e206bb79ac8462c1186251231f97368b1673ff73a3c38f6c5cf37195480fe010b2b7199e829317a4d3
 DIST python-debian_0.1.27.tar.xz 289692 SHA256 3a21d07553d46c0cf7961b13483e62005d8793a3780e79d1191b357f50174eab SHA512 101f49ce2337266856f6cf8f6d33c42d9fa2a281194a7d6fb2328d6e5f46574a7b742b04c4250e2384c197c6e6886c0e9f7b504e8c2230afaa00777e1a0057ab WHIRLPOOL f8b867fbbd236d685acbdf880bf636efb59f033788365aeea52e898217735bd0117526c2f67cfe9205d3f31b5d8da68eb5e6e6ec1ad2920a2ed0d4d54616c38f
 EBUILD python-debian-0.1.26.ebuild 1189 SHA256 7f35b954f4ae69c21f537dadb2dad8de1a4c499a6dfa2209243b028ea4b67b64 SHA512 21e0bf952ad361e2928470a3324396087e9f0b09084bf47e64f308956a209c812ac44912644745f99e1f067f7bf7b22f6d79f6577fe0c9ace65d64b520c06de0 WHIRLPOOL 410a965105891ade4f50bb66f48423f05de8030f609280fdab707e76570a41a48b9cdebc8ea4178f17ab789e254de591c6f89945ed3e4c87f2aa1378f350ae97
-EBUILD python-debian-0.1.27.ebuild 1208 SHA256 27a96bf9fd7498d5af38cb1ce02cb85945d9e8dbd01bb67fa3be1e5c72feefc6 SHA512 7e8d96c3de970f3d94744998f46e817f28dd0d473afcb30b11ed01cec7c460c67242b7a29ecc303706f435511593c3080b2fff228b26145479433d9f5952edf5 WHIRLPOOL fb9d58ea0fd6ce6ebdc5f2ccb9a6d22097338ae312311c2607dafbbbec0f455ea5546117e848ac4f20016fe14af512afe8ca2ea89cbf743cbbebc60d8c4a5339
-MISC ChangeLog 1926 SHA256 eafb2fdb3daaa0429afa24c478df412519cacba50c54d2dd3bc49bb075ee68e2 SHA512 f086de6f915e3085a5a1484ef76cbe2c49bd832ce902008a791554e216227237768fa9be30d994660e84cbd704d4e0e41f4ccf3bb56c8623dd3204cf1e3cee97 WHIRLPOOL 81c70279bb79070126b4e40feefeb6689e25cbc706cda6921d9eefdee21049a369613f97c10cb508906cd791b9fb5c4c79cb3dd6db8f057c5bed62cd27dd4c4b
+EBUILD python-debian-0.1.27.ebuild 1268 SHA256 0d736fc8b3d537cfe1124ee4431754cd479e5cb8cb379785de12459df8dae3de SHA512 0ba02c183838a68ef4a3ddf30a67b0bb0166312a82f9af09b8a2ac5c4b99c59de0b57c741c199e574e24b98af6ed5256eb8f7fcf8c36f8e13a0be693026186c0 WHIRLPOOL 210f7737ad46efef2b7a1f2363a1e3af659955639e2983bb1e4a1dbc881d7871ee5ad219436571d9b7045ea8378f6f9b8e232c26752983e9e09bdda1ffb993ad
+MISC ChangeLog 2057 SHA256 6291b25829b72f62e2636a2dae06d2f8fabf24f4e1b8730eced736eaf59db0ef SHA512 313296b453b36e0f95b78324104cdc0e45617fdeab076d3ee8e72505b93d991e8410a2fcaa8ed0e9185546592b446d8c4e47e03c686b60d694cde66abd5b03ec WHIRLPOOL b609ab8cbeb6619fb68e7ac7793b19be413e62d5708e91230ff23a3a183b6bc40a45b93f4f5aec8dd7c2413dfd26098eecac5985b8e9bfebb7527478d85bb738
 MISC metadata.xml 260 SHA256 269d5b35e6446bebcab81ed3b0abe84d7d50653ffc30c59593aef24c9c2c8650 SHA512 524d7eb27ae3063557b9fe86182ee8494c0c7f876017c661346ebedaff9dfefb1b3f3e9c94fc1585a79f2f21cb75638fe10f9aa9aad9f9f9cefbfa3035ca7dd6 WHIRLPOOL 7be54ded133220f6e61bf26e9736093ca965ce1d0abc007285754f26709a472ac0f85ee809b6f73b37bbaa2104b781dcba6ecf0cf049a6cc5e0051ebda226f30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUz1T4ACgkQC77qH+pIQ6SV4gD/VClu1Rpd7oZgy37vJyErsz3a
-tn/mb4t6NPd8gemUersBAMXFLg7xe9ddFCaHuKEgWqj9Vu276415uNSvz2n04hIa
-=Yi0c
+iF4EAREIAAYFAlUz2ccACgkQC77qH+pIQ6TeJwEAnl+rViqrL+fj+aRTcFA4iM0M
+9A5BdfGHc/b0RkV36QAA/2vpy8sZ9Dw/hntLASXyriE/c3S2bNARm8G27uKdj+Ft
+=vqLp
 -----END PGP SIGNATURE-----
