@@ -1,28 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/systemu/systemu-2.5.2.ebuild,v 1.4 2014/04/05 17:53:36 mrueg Exp $
-
-EAPI=4
-# Test hangs on jruby
-USE_RUBY="ruby19"
-
-RUBY_FAKEGEM_TASK_DOC=""
-
-RUBY_FAKEGEM_EXTRADOC="README"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Universal capture of STDOUT and STDERR and handling of child process PID"
-HOMEPAGE="http://codeforpeople.com/lib/ruby/systemu/"
-
-LICENSE="Ruby"
-SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE=""
-
-all_ruby_install() {
-	all_fakegem_install
-
-	insinto /usr/share/doc/${PF}
-	doins -r samples
-}
