@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
-DESCRIPTION=Universal capture of STDOUT and STDERR and handling of child process PID
-EAPI=4
-HOMEPAGE=http://codeforpeople.com/lib/ruby/systemu/
-IUSE=elibc_FreeBSD ruby_targets_ruby19 test test
-KEYWORDS=amd64 x86
-LICENSE=Ruby
-RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 )
-SLOT=0
-SRC_URI=mirror://rubygems/systemu-2.5.2.gem
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	2257adeaac9408ab545ef49ae751bae6	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=ac0b772cc469f8ba675232561660ee5c
