@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
+DEPEND=>=dev-libs/glib-2.37.3:2 >=x11-libs/gtk+-3.11.2:3[introspection?] virtual/udev introspection? ( >=dev-libs/gobject-introspection-0.9.5 ) !net-wireless/bluez-gnome app-text/docbook-xml-dtd:4.1.2 dev-libs/libxml2:2 dev-util/gdbus-codegen >=dev-util/gtk-doc-am-1.9 >=dev-util/intltool-0.40.0 virtual/libudev virtual/pkgconfig x11-proto/xproto app-arch/xz-utils >=sys-apps/sed-4 virtual/pkgconfig
+DESCRIPTION=Bluetooth graphical utilities integrated with GNOME
+EAPI=5
+HOMEPAGE=https://wiki.gnome.org/GnomeBluetooth
+IUSE=+introspection debug
+KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86
+LICENSE=GPL-2+ LGPL-2.1+ FDL-1.1+
+RDEPEND=>=dev-libs/glib-2.37.3:2 >=x11-libs/gtk+-3.11.2:3[introspection?] virtual/udev introspection? ( >=dev-libs/gobject-introspection-0.9.5 ) >=net-wireless/bluez-5 x11-themes/gnome-icon-theme-symbolic
+SLOT=2/13
+SRC_URI=mirror://gnome/sources/gnome-bluetooth/3.14/gnome-bluetooth-3.14.1.tar.xz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	10c513def52488230abb60a4b19a03b9	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	udev	da001465a2e939c93f7ae16947ce3438	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=d24b56cd5050f61b18a84a76c67b2e93
