@@ -5,14 +5,16 @@ AUX 61-gnome-bluetooth.rules 399 SHA256 3590ead9f0f5344b8dd7b73d11ce2750711072f2
 AUX gnome-bluetooth-3.12.0-gold.patch 1558 SHA256 ac2058569a85377c0fc91a8a0d1cf1948c89f9be9c6110b7187c213a2a462092 SHA512 1fd112056f42e99de287757f7603c0d439916659b22d1b1f51e21220ef14a72007898a766cc68a172a8b8924d9a8db4c80e4cfec4808c51aa55665c6f8c22c45 WHIRLPOOL f32d205bc2c727df66d70b0e12f5afc7bc8d04985893b73d848e64a409b7785b797c1f596f70bc268e1e53c80c3e42457ea7091999accc0be1f15d6ccb33b80b
 DIST gnome-bluetooth-3.12.0.tar.xz 1341584 SHA256 086917c13ada4e3233eafad0a91b072cd60bb2be7c0b7d6657072123fd115c67 SHA512 f31e0795b605e87b8aa29a5990985fa788eac41722ebfd200c5119528823c0fd5be180ae1b92d77585d18259da4cf10f258fd2d62573d8956ff1131abf0720fd WHIRLPOOL 42dee88cfef5b6fd5243f818dcaab03a450793c79e1947f8f8ca61293eb89002b9d5053478805009b769e5e534616d72b100fc8c672b8ef5eb64ff6d7487fd40
 DIST gnome-bluetooth-3.14.0.tar.xz 1350300 SHA256 e2ef5e0036748eeb4756e8cb57e9909f10b771d290086dd1f377451d3fe18b09 SHA512 5df9367bf7ac08a896d2a34b855c06c0f9f2b8485f1f549659ee42b9ccea5db0983eef271b4611cfc234f590e4cca7485f353342efbe1e28e7068d4d6c2a0beb WHIRLPOOL 920ff7993a3f74bc5da0343097c7a8e1354ab95feda97cff1c8a87f991a6cae6259593a39f072199ae1ef320739b7dd074c5078e6fa66cbf23ed5874c22748ca
+DIST gnome-bluetooth-3.14.1.tar.xz 1355116 SHA256 3d2f6161c43d4c53af37979d6d7ff8714211676bffa80e211f168819e64bb4c9 SHA512 64ccc7fe32b9dce2513caca4e785133376d8ab776cdfe4d6a8146897b4a526cd4426f81d55fddec8971614b4b0a15523ebde9cde0f628aed10c807b2c1d9ad48 WHIRLPOOL 5bfbd131ca17f05a071dfccf627d488fb61e0375a172a627d96152e5bc82294d03a5e1b5cb04ca44921e440d774fd43219843ed1f6153d8a53deac567b8d08b0
 EBUILD gnome-bluetooth-3.12.0.ebuild 2041 SHA256 520c0cfd690734eded1aa90b1215d7199f4d8bcff8e71e3ec2b045f6836d775d SHA512 fb13cf1f1514864b72bdf142f5d703fad390f3aa54c7535678fa93c1cc71e8e9574aa8e8804c37a126c5d7761212a0fff35e9c8a721f9ed706427c31fe6312e8 WHIRLPOOL 710fa80dd051a9f83a6e83f76a1c2766a4082f08cdccdc5e1cf0aacc972ca5c3d3ef492f939f7f5d906622dc27227306b94c385f15f324c08519966e99ff7fb6
 EBUILD gnome-bluetooth-3.14.0.ebuild 1855 SHA256 7f9b8c389b437b44037816f6383bbe08d37791730040495f9aee9c8f18020be7 SHA512 7ebeefa75fb6c80be625fac6c766b6baf7d75fce41bd3a958e311ba3fc5a7e01f30438b31e1ea3ee76e5922ae3689768fc118c1750161f303b9e622bb86bc92a WHIRLPOOL 9b81ca354fb919cd81e4467d957c5b97f23bfc7bb8ad4774e05779a78b8e4f1667ca7e9bdca28803c47fd0c5635dd378f1effccfd23f58fbfb45b47d7183171a
-MISC ChangeLog 25390 SHA256 76e3353d4e22142acf5767ec95061edb115bba8d977f395aff83ab920f8d7efa SHA512 22fd8a15768ee0b17b660f92bfd95f2e1cbdc1f93817f100459cc7639a1f648f5080807c39ef9e0c319d77b87c18de394e5ab8b9d9019fa791ea40372ac55ef9 WHIRLPOOL b892dd02c77109e50f986ece583fb8eb1b8a3b708eeb6db127a75cfd1561275c257cd8db3b8c2e41bdc84dfa2e0db308ea3f7d6c376b01b5319c58b5f91d7120
+EBUILD gnome-bluetooth-3.14.1.ebuild 1855 SHA256 cc922f999b6693681aedd046d4a6e787b6c70f3e34aecf8df4dfda837706147e SHA512 951081759c87a2dacb779604a85240bdf2d8c6a45c0b9cddc6f751de0ac2c1be616121a382c05fd5116a270f72613b1ceac0c49cae020f904356ba2e36e3ea0c WHIRLPOOL 987c27f0c3b706837c0e6728b38524355331a0760dc423a342cb71680c9ccf279be5d2acca32798b622d47c7749c71189ddc8f0facdb45b85d76f8b6d128383d
+MISC ChangeLog 25532 SHA256 2961551d686f3817b77a2d22acc4d875e50016a1c5e0c894b617557981513b21 SHA512 a8a41128ec829ef03500282dc15a6676e3d265cfc4c3a9b6473092f29407e924ad842dbab6a484097f26b614520da26ed86343e44e8578a76573215b39b796cd WHIRLPOOL 791ee823713441a3bc7799654a370378570e6bac892872915168971db3e450dda7609ab708fed561fd6121f1f57385398388cc3c2ba3eb66d176e284f9015ff6
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUFieUACgkQCaWpQKGI+9RlAwCfcn3kvg+rUaasjbWbqWbbQTlA
-WogAn0icSKK/6trMalYw5e1vhOTY43cn
-=0YYc
+iEYEAREIAAYFAlUz2SYACgkQ1fmVwcYIWAYrGQCg5YljjGr9Jbgs0KObi0bJCF2N
+JQIAnRMz9fMtfQvlOIIcq1Sm/sphT91R
+=/I3i
 -----END PGP SIGNATURE-----
