@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-debian
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-debian/ChangeLog,v 1.12 2015/04/19 16:18:02 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-debian/ChangeLog,v 1.13 2015/04/19 16:37:26 floppym Exp $
+
+  19 Apr 2015; Mike Gilbert <floppym@gentoo.org> python-debian-0.1.27.ebuild:
+  Add link to upstream bug report on test failures.
 
 *python-debian-0.1.27 (19 Apr 2015)
 
